--- a/spec/fixtures/vcr_cassettes/MovieFacade/class_methods/_search_by_id/returns_a_movie_by_movie_id.yml
+++ b/spec/fixtures/vcr_cassettes/MovieFacade/class_methods/_search_by_id/returns_a_movie_by_movie_id.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.themoviedb.org/3/movie/238?api_key=6519ceb9368c144d4aa93f3b6dc61d81
+    uri: https://api.themoviedb.org/3/movie/238?api_key=bd19e0e9dbaaef8c0424587ab6f34b4f
     body:
       encoding: US-ASCII
       string: ''
@@ -25,7 +25,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 16 Oct 2021 14:31:22 GMT
+      - Sat, 16 Oct 2021 17:40:54 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -42,23 +42,23 @@ http_interactions:
       X-Memc-Key:
       - b021e697221748056c5219e84893ed30965992af
       X-Memc-Age:
-      - '2161'
+      - '13533'
       X-Memc-Expires:
-      - '12324'
+      - '952'
       Etag:
       - W/"cf272bfb58af798d92619ca863408b4e"
-      X-Edge-Origin-Shield-Skipped:
-      - '0'
       Vary:
       - Accept-Encoding
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 c014286f5cabafafe7a90371928412b6.cloudfront.net (CloudFront)
+      - 1.1 45bcf5efa1200038e9ba50454f354237.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DFW55-C3
+      - DFW53-C1
       X-Amz-Cf-Id:
-      - jMDVF5Flbdg14vHeDSDmAGzlZRcm4EKojf91obd7CEZAc_BqBivUjw==
+      - qfrPE8htBFYsjHYe2dN1VubxCwvCvKmZOLgegzI6f19LPRDpjdW34A==
+      Age:
+      - '3877'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/rSPw7tgCH9c6NqICZef4kZjFOQ5.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -71,5 +71,5 @@ http_interactions:
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
         offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.7,"vote_count":14912}'
-  recorded_at: Sat, 16 Oct 2021 14:31:22 GMT
+  recorded_at: Sat, 16 Oct 2021 18:45:31 GMT
 recorded_with: VCR 6.0.0
