Add 2 additional endpoints

--- a/spec/fixtures/vcr_cassettes/User_dashboard/single_user_tests_for_displays/displays_a_Discover_Movies_button.yml
+++ b/spec/fixtures/vcr_cassettes/User_dashboard/single_user_tests_for_displays/displays_a_Discover_Movies_button.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.themoviedb.org/3/movie/238?api_key=6519ceb9368c144d4aa93f3b6dc61d81
+    uri: https://api.themoviedb.org/3/movie/238?api_key=bd19e0e9dbaaef8c0424587ab6f34b4f
     body:
       encoding: US-ASCII
       string: ''
@@ -25,7 +25,7 @@ http_interactions:
       Connection:
       - keep-alive
       Date:
-      - Tue, 19 Oct 2021 17:57:40 GMT
+      - Tue, 19 Oct 2021 21:32:29 GMT
       Server:
       - openresty
       Access-Control-Allow-Origin:
@@ -42,9 +42,9 @@ http_interactions:
       X-Memc-Key:
       - b021e697221748056c5219e84893ed30965992af
       X-Memc-Age:
-      - '1080'
+      - '13969'
       X-Memc-Expires:
-      - '16576'
+      - '3687'
       Etag:
       - W/"8def2af43682c07586fc7a54e5ae95b7"
       Vary:
@@ -52,13 +52,13 @@ http_interactions:
       X-Cache:
       - Hit from cloudfront
       Via:
-      - 1.1 48ea53c7edffa2cdbdc32f7d94966344.cloudfront.net (CloudFront)
+      - 1.1 e3aaa12a3d6bdaeb78a7840f524b652d.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
-      - DEN50-C2
+      - DFW55-C3
       X-Amz-Cf-Id:
-      - VtlGmJ3JBv4KthtDCT_lfuYW23Lm-CdJmqpMmbMkTvs-WKIb57JQ9g==
+      - AlV66Bpu_gnEWpMRz5MNHmiO_OArASp4f5bJYcVNYcXIkjrar4eTTw==
       Age:
-      - '8611'
+      - '2992'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/rSPw7tgCH9c6NqICZef4kZjFOQ5.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -71,5 +71,5 @@ http_interactions:
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
         offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.7,"vote_count":14926}'
-  recorded_at: Tue, 19 Oct 2021 20:21:11 GMT
+  recorded_at: Tue, 19 Oct 2021 22:22:21 GMT
 recorded_with: VCR 6.0.0
