Secure api key in travis file

--- a/spec/fixtures/vcr_cassettes/MovieFacade/class_methods/_search_by_id/returns_a_movie_by_movie_id.yml
+++ b/spec/fixtures/vcr_cassettes/MovieFacade/class_methods/_search_by_id/returns_a_movie_by_movie_id.yml
@@ -50,13 +50,15 @@ http_interactions:
       Vary:
       - Accept-Encoding
       X-Cache:
-      - Miss from cloudfront
+      - Hit from cloudfront
       Via:
-      - 1.1 7b49f0ebc996eeeb8204ff1903b5186b.cloudfront.net (CloudFront)
+      - 1.1 021eeb6d2db582fb735cd2aa172f178e.cloudfront.net (CloudFront)
       X-Amz-Cf-Pop:
       - DFW55-C3
       X-Amz-Cf-Id:
-      - 6qLnfMpxZEZ_LgUOVYWYkdumfyhNF3c1Zd06DYSQEgqhdLwHV71QSA==
+      - SZm3fLoUioZ8vrQSieOk1ses9TfiDm6PpUhOuEa-2o47Cgh2JFmqVg==
+      Age:
+      - '855'
     body:
       encoding: ASCII-8BIT
       string: '{"adult":false,"backdrop_path":"/rSPw7tgCH9c6NqICZef4kZjFOQ5.jpg","belongs_to_collection":{"id":230,"name":"The
@@ -69,5 +71,5 @@ http_interactions:
         Productions","origin_country":"US"}],"production_countries":[{"iso_3166_1":"US","name":"United
         States of America"}],"release_date":"1972-03-14","revenue":245066411,"runtime":175,"spoken_languages":[{"english_name":"English","iso_639_1":"en","name":"English"},{"english_name":"Italian","iso_639_1":"it","name":"Italiano"},{"english_name":"Latin","iso_639_1":"la","name":"Latin"}],"status":"Released","tagline":"An
         offer you can''t refuse.","title":"The Godfather","video":false,"vote_average":8.7,"vote_count":14931}'
-  recorded_at: Wed, 20 Oct 2021 21:32:36 GMT
+  recorded_at: Wed, 20 Oct 2021 21:46:51 GMT
 recorded_with: VCR 6.0.0
